feat(tools): 新增 Gemini 水印去除工具
- 新增 gemini_watermark_remover.py 用于去除 Gemini 生成图片的星星水印
- 支持自动检测水印尺寸（小图 48px，大图 96px）
- 更新 tools/README.md 工具文档
- 更新 README.md 和 README_EN.md 添加水印去除说明
- 更新 requirements.txt 添加 Pillow 和 numpy 依赖
- 更新 roles/Image_Generator.md 添加 Gemini 生成流程

参考: https://github.com/journey-ad/gemini-watermark-remover

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,12 @@
 # 用于将 SVG 文件批量转换为 PowerPoint 演示文稿
 # SVG 以原生矢量格式嵌入，需要 PowerPoint 2016+ 查看
 python-pptx>=0.6.21
+
+# ─────────────────────────────────────────────────────────────
+# 图片处理工具
+# ─────────────────────────────────────────────────────────────
+# fix_image_aspect.py - 修复图片宽高比（防止 PPT 转形状时拉伸）
+# gemini_watermark_remover.py - 去除 Gemini 生成图片的水印
+Pillow>=9.0.0
+numpy>=1.20.0
+
