feat(tools): 新增 Python 版网页转 Markdown 工具
- 新增 web-to-md.py：采用 BeautifulSoup4 + requests 实现，支持自动纠正编码和精确 DOM 解析。

- 更新 requirements.txt：添加相关依赖。

--- a/requirements.txt
+++ b/requirements.txt
@@ -38,3 +38,8 @@ PyMuPDF>=1.23.0
 Pillow>=9.0.0
 numpy>=1.20.0
 
+# ─────────────────────────────────────────────────────────────
+# 网页转 Markdown 工具 (tools/web-to-md.py)
+# ─────────────────────────────────────────────────────────────
+requests>=2.31.0
+beautifulsoup4>=4.12.0
