--- a/requirements.txt
+++ b/requirements.txt
@@ -39,7 +39,7 @@ Pillow>=9.0.0
 numpy>=1.20.0
 
 # ─────────────────────────────────────────────────────────────
-# 网页转 Markdown 工具 (tools/web-to-md.py)
+# 网页转 Markdown 工具 (tools/web_to_md.py)
 # ─────────────────────────────────────────────────────────────
 requests>=2.31.0
 beautifulsoup4>=4.12.0
