docs(deps): 补充 google-genai 依赖到 requirements.txt

--- a/requirements.txt
+++ b/requirements.txt
@@ -43,3 +43,9 @@ numpy>=1.20.0
 # ─────────────────────────────────────────────────────────────
 requests>=2.31.0
 beautifulsoup4>=4.12.0
+
+# ─────────────────────────────────────────────────────────────
+# AI 图片生成工具 (tools/nano_banana_gen.py)
+# ─────────────────────────────────────────────────────────────
+# 用于调用 Google Gemini API 生成高质量图片（需要 API Key）
+google-genai>=1.0.0
